Refactoring (#828)
* added unit test

* Fixes #785

* Fixed test

* Cleaned

* WIP

* WIP

* WIP

* Initial fixes

* WIP

* Fixed tests

* Cleaned

* Fixed

* Cleaned

* Fixed

* Cleaned